Feat: Implement Import, Validation, and Performance Optimization
- Added ImportService for CSV/Excel basic, Matecat, and Smartcat formats.
- Implemented header validation for import files.
- Added Import UI buttons and overlay in DictionaryListPage.
- Added Pagination (GetPaginatedAsync) to DataService.
- Implemented Infinite Scroll and Search Debounce (1s) in DictionaryListPage.
- Optimized SearchAsync to use server-side prefix filtering.
- Updated Constants and Localization resources.
- Updated README.md.

--- a/Resources/Languages/AppResources.resx
+++ b/Resources/Languages/AppResources.resx
@@ -63,6 +63,10 @@
   <data name="ExportOptions" xml:space="preserve">
     <value>Export Options</value>
   </data>
+  <data name="ImportOptions" xml:space="preserve">
+    <value>Import Options</value>
+  </data>
+
   <data name="SearchPlaceholder" xml:space="preserve">
     <value>Search terms...</value>
   </data>
@@ -155,5 +159,23 @@
   </data>
   <data name="EnterExample" xml:space="preserve">
     <value>Enter example</value>
+  </data>
+  <data name="LoginTitle" xml:space="preserve">
+    <value>Sign in to continue</value>
+  </data>
+  <data name="EmailPlaceholder" xml:space="preserve">
+    <value>Email</value>
+  </data>
+  <data name="PasswordPlaceholder" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="LoginButton" xml:space="preserve">
+    <value>LOGIN</value>
+  </data>
+  <data name="RegisterButton" xml:space="preserve">
+    <value>Create Account</value>
+  </data>
+  <data name="GuestButton" xml:space="preserve">
+    <value>Continue as Guest</value>
   </data>
 </root>
